# cs-crate

./: .gitignore  CITATION.cff  CODEX.md  README.md  pyproject.toml
src/cscrate/: __init__.py  conventions.py  core.py
tests/: test_cscrate.py  test_educational_fixture.py
tests/fixtures/research_project/: CITATION.cff  GUIDE.md  LICENSE  README.md  pyproject.toml  ro-crate-metadata.py
tests/fixtures/research_project/data/: measurements-metadata.json  measurements.csv
tests/fixtures/research_project/data/results/: run-01.vtk  run-02.vtk
tests/fixtures/research_project/data/survey/: datapackage.json  responses.csv
tests/fixtures/research_project/src/: config.json  package.json  solver.py
