[build-system]
requires = ["flit_core>=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cscrate"
version = "0.1.0"
description = "A lightweight Python EDSL for generating RO-Crates from scientific software repositories"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Christoph Garth", email = "garth@rptu.de" },
]
dependencies = [
  "rocrate>=0.10",
  "cffconvert>=2.0",
  "csvw>=3.0",
  "frictionless>=5.0",
  "pathspec>=0.11",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.flit.module]
name = "cscrate"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
